k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: med-record
  namespace: med-record-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: med-record
  template:
    metadata:
      labels:
        app: med-record
    spec:
      containers:
        - name: med-record
          image: vgmarques/med-record
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
