k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: med-record-service
  namespace: med-record-dev
spec:
  type: LoadBalancer
  selector:
    app: med-record
  ports:
    - port: 80
      targetPort: 3000
